crates/keron-lang/tests/corpus/errors/check/duplicate_negative_map_key.keron
val xs: Map<Int, String> = {-1: "a", -1: "b"}
